Changes in 2.1.2:
  o New Features
    * Conary now runs all destdir policies for capsule packages.
      Previously, it disabled destdir policies to avoid unintentional
      modification; now all destdir policies should take capsules
      into account and some destdir policies are required. (CNY-3320)
    * Scripts from capsules are now written as files that are not
      packaged but are available for inspection during the packaging
      process, and policy can investigate script files. (CNY-3321)

  o Bug Fixes:
    * Committing relative changesets with multiple specifications for
      a single fileId would no longer cause a repository traceback when
      those specifications were part of different troves. (CNY-3316)

Changes in 2.1.1:
  o New Features
    * Added repair command as an experimental feature. (CNY-1800)
    * Files marked as "missingok" in encapsulated RPMs now have that
      status represented by a "MissingOkay" flag on the corresponding
      Conary file object. (CNY-3306)
    * Files from encapsulated RPMs now have the mtime from the
      RPM recorded in troveInfo.  The mtime of last change is
      still used to calculate fileIds, preserving knowledge of
      when meaningful file information has changed. (CNY-3307)
    * Added support in verify and update paths for prelinked
      binaries. (CNY-3298)

  o Bug Fixes:
    * Changeset reassembly for capsules ignores directories. (CNY-3305)
    * Encapsulated symbolic links are represented as having the mode
      that will exist on the filesystem, even if that varies from the
      mode recorded in the capsule. (CNY-3304)
    * Previously, getTroveLeavesByPath() didn't return leaves; it
      returned the most recent trove which includes that path.
      It now returns only leaves (most recent versions) that include
      that path, and if the path is only included in older versions,
      no troves are returned. (CNP-184)

  o Internal Changes: