@@ -66,6 +66,9 @@ PREINPROG       = 1085
 POSTINPROG      = 1086
 PREUNPROG       = 1087
 POSTUNPROG      = 1088
+OBSOLETENAME    = 1090
+OBSOLETEFLAGS   = 1114
+OBSOLETEVERSION = 1115
 VERIFYSCRIPTPROG = 1091
 TRIGGERSCRIPTPROG = 1092
 DIRINDEXES      = 1116
